--- a/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.html
+++ b/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.html
@@ -64,7 +64,7 @@
                     </select>
                 </div>
                 <div class="btnBearbeiten">
-                    <p>Auftrag speichern</p>
+                    <p (click)="save()">Auftrag speichern</p>
                 </div>
 
             </div>
@@ -224,7 +224,7 @@
             </div>
             <div class="split secondSplit">
                 <div class="btnPositionen">
-                    <p>Position entfernen</p>
+                    <p (click)="deletePosition()">Position entfernen</p>
                 </div>
             </div>
             <div class="split thirdSplit">
