--- a/src/app/_hauptKomponente/f-angebot/f-angebot.component.html
+++ b/src/app/_hauptKomponente/f-angebot/f-angebot.component.html
@@ -64,7 +64,7 @@
                     </select>
                 </div>
                 <div class="btnBearbeiten">
-                    <p>Angebot speichern</p>
+                    <p (click)="save()">Angebot speichern</p>
                 </div>
 
             </div>
@@ -141,7 +141,7 @@
                 </div>
                 <div class="split secondSplit">
                     <div class="btnPositionen">
-                        <p>Position entfernen</p>
+                        <p (click)="deletePosition()">Position entfernen</p>
                     </div>
                 </div>
                 <div class="split thirdSplit">
