--- a/src/app/_hauptKomponente/h-kunde/h-kunde.component.html
+++ b/src/app/_hauptKomponente/h-kunde/h-kunde.component.html
@@ -65,7 +65,7 @@
                     <p (click)="openLoeschen()">Kunde löschen</p>
                 </div>
                 <div class="btnBearbeiten">
-                    <p>Kunde speichern</p>
+                    <p (click)="save()">Kunde speichern</p>
                 </div>
 
             </div>
