--- a/src/app/_hauptKomponente/j-der-artikel/j-der-artikel.component.html
+++ b/src/app/_hauptKomponente/j-der-artikel/j-der-artikel.component.html
@@ -94,7 +94,7 @@
                     <p (click)="openLoeschen()">Artikel löschen</p>
                 </div>
                 <div class="btnBearbeiten">
-                    <p>Artikel speichern</p>
+                    <p (click)="save()">Artikel speichern</p>
                 </div>
 
             </div>
