--- a/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.html
+++ b/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.html
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="speichern">
-            <p>Änderungen speichern</p>
+            <p (click)="save()">Änderungen speichern</p>
         </div>
     </div>
 </div>
