--- a/src/app/_hauptKomponente/n-projekte/n-projekte.component.html
+++ b/src/app/_hauptKomponente/n-projekte/n-projekte.component.html
@@ -5,8 +5,8 @@
         <div class="windowTitle windowHeader">
             <p>Projekte</p>
             <div class="searchBarSmall">
-                <input type="text" id="searchBarSmall" placeholder="SEARCH">
-                <a href="#"><img [src]="search" alt=""></a>
+                <input type="text" id="searchBarSmall" placeholder="SEARCH" (keydown.enter)="search()">
+                <a (click)="search()"><img [src]="searchIcon" alt=""></a>
             </div>
             <div class="btnErfassen">
                 <button type="button" class="btnErfassen" (click)="openGenerateProject()">Projekt Erfassen</button>
