--- a/src/app/_popupKomponente/auftrag-abschliessen/auftrag-abschliessen.component.html
+++ b/src/app/_popupKomponente/auftrag-abschliessen/auftrag-abschliessen.component.html
@@ -43,7 +43,7 @@
     </div>
     <div class="popupFooter">
         <div class="btnBearbeiten btnSpeichern">
-            <p>Auftrag endgültig abschliessen</p>
+            <p (click)="complete()">Auftrag endgültig abschliessen</p>
         </div>
     </div>
 </div>
