--- a/src/app/_popupKomponente/belege/belege.component.html
+++ b/src/app/_popupKomponente/belege/belege.component.html
@@ -35,7 +35,7 @@
             </form>
 
             <div class="btnBearbeiten">
-                <p>Beleg versenden</p>
+                <p (click)="sendDok()">Beleg versenden</p>
             </div>
         </div>
         <div class="split oneThird">
