--- a/src/app/_popupKomponente/generate-artikel/generate-artikel.component.html
+++ b/src/app/_popupKomponente/generate-artikel/generate-artikel.component.html
@@ -56,7 +56,7 @@
     </div>
     <div class="popupFooter">
         <div class="btnBearbeiten btnSpeichern">
-            <p>Artikel erfassen</p>
+            <p (click)="generate()">Artikel erfassen</p>
         </div>
     </div>
 </div>
