--- a/src/app/_popupKomponente/generate-kunde/generate-kunde.component.html
+++ b/src/app/_popupKomponente/generate-kunde/generate-kunde.component.html
@@ -46,7 +46,7 @@
     </div>
     <div class="popupFooter">
         <div class="btnBearbeiten btnSpeichern">
-            <p>Kunde erfassen</p>
+            <p (click)="generate()">Kunde erfassen</p>
         </div>
     </div>
 </div>
