--- a/src/app/_popupKomponente/position-artikel/position-artikel.component.html
+++ b/src/app/_popupKomponente/position-artikel/position-artikel.component.html
@@ -37,7 +37,7 @@
     </div>
     <div class="popupFooter">
         <div class="btnBearbeiten btnSpeichern">
-            <p>Artikel auswählen</p>
+            <p (click)="selectArticle()">Artikel auswählen</p>
         </div>
     </div>
 </div>
