--- a/src/app/_popupKomponente/projekt-kundendaten/projekt-kundendaten.component.html
+++ b/src/app/_popupKomponente/projekt-kundendaten/projekt-kundendaten.component.html
@@ -27,7 +27,7 @@
             <input type="text" placeholder="Funktion">
 
             <div class="btnBearbeiten">
-                <p>Neuer Ansprechpartner speichern</p>
+                <p (click)="saveNewPartner()">Neuer Ansprechpartner speichern</p>
             </div>
 
         </div>
@@ -49,7 +49,7 @@
     </div>
     <div class="popupFooter">
         <div class="btnBearbeiten btnSpeichern">
-            <p>Änderungen speichern</p>
+            <p (click)="save()">Änderungen speichern</p>
         </div>
     </div>
 </div>
