--- a/src/app/_popupKomponente/textposition/textposition.component.html
+++ b/src/app/_popupKomponente/textposition/textposition.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="popupFooter">
         <div class="btnBearbeiten btnSpeichern">
-            <p>Textposition erfassen</p>
+            <p (click)="addTextArticle()">Textposition erfassen</p>
         </div>
     </div>
 </div>
