--- a/src/app/_popupKomponente/umwandeln/umwandeln.component.html
+++ b/src/app/_popupKomponente/umwandeln/umwandeln.component.html
@@ -31,7 +31,7 @@
     </div>
     <div class="popupFooter">
         <div class="btnBearbeiten btnSpeichern">
-            <p>Angebot umwandeln</p>
+            <p (click)="convert()">Angebot umwandeln</p>
         </div>
     </div>
 </div>
