--- a/src/app/_popupKomponente/generate-mitarbeiter/generate-mitarbeiter.component.html
+++ b/src/app/_popupKomponente/generate-mitarbeiter/generate-mitarbeiter.component.html
@@ -53,7 +53,7 @@
     </div>
     <div class="popupFooter">
         <div class="btnBearbeiten btnSpeichern">
-            <p>Mitarbeiter erfassen</p>
+            <p (click)="generate()">Mitarbeiter erfassen</p>
         </div>
     </div>
 </div>
