--- a/src/app/_popupKomponente/generate-projekt/generate-projekt.component.html
+++ b/src/app/_popupKomponente/generate-projekt/generate-projekt.component.html
@@ -70,7 +70,7 @@
     </div>
     <div class=" popupFooter ">
         <div class="btnBearbeiten btnSpeichern ">
-            <p>Projekt erfassen</p>
+            <p (click)="generate()">Projekt erfassen</p>
         </div>
     </div>
 </div>
