--- a/src/app/_popupKomponente/stunden/stunden.component.html
+++ b/src/app/_popupKomponente/stunden/stunden.component.html
@@ -17,115 +17,28 @@
                 <p class="inputTime">min:</p>
             </div>
             <div class="stundenContent">
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
+                <div class="stunden splitStunden" *ngFor="let eintrag of stundenEintrag">
+                    <input class="inputDate" type="date" value="{{eintrag.datum}}">
                     <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein" *ngFor="let ms of meilensteine">{{ms.ms}}</option>
                     </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
+                    <input class="inputText" type="text" value="{{eintrag.leistung}}">
+                    <input class="inputTime" type="text" value="{{eintrag.stunden}}">
+                    <input class="inputTime" type="text" value="{{eintrag.minuten}}">
                 </div>
 
 
             </div>
             <div class="stundenHinzufuegen splitStunden">
                 <div class="btnBearbeiten btnHinzufuegen">
-                    <p>+</p>
+                    <p (click)="addEintrag()">+</p>
                 </div>
             </div>
         </div>
     </div>
     <div class="popupFooter">
         <div class="btnBearbeiten btnSpeichern">
-            <p>Änderungen speichern</p>
+            <p (click)="save()">Änderungen speichern</p>
         </div>
     </div>
 </div>
