--- a/src/styles.sass
+++ b/src/styles.sass
@@ -93,3 +93,23 @@ a
 .active 
     background-color: $primaryColor !important
 
+/* Notifications */
+.simple-notification.info
+    background-color: $primaryColor !important
+
+.simple-notification.info .sn-progress-loader span
+    background-color: #f5f5f5 !important
+
+.simple-notification.success
+    background-color: #47C265 !important
+
+.simple-notification.success .sn-progress-loader span
+    background-color: #f5f5f5 !important
+
+.simple-notification.error
+    background-color: #C23E46 !important
+
+.simple-notification.error .sn-progress-loader span
+    background-color: #f5f5f5 !important
+
+
