--- a/src/app/_popupKomponente/ansprechpartner/ansprechpartner.component.html
+++ b/src/app/_popupKomponente/ansprechpartner/ansprechpartner.component.html
@@ -20,7 +20,7 @@
                 </table>
             </div>
             <div class="btnBearbeiten">
-                <p>+</p>
+                <p (click)="addAnsprechpartner()">+</p>
             </div>
         </div>
         <div class="split secondSplit">
