--- a/src/app/_popupKomponente/gruppen/gruppen.component.sass
+++ b/src/app/_popupKomponente/gruppen/gruppen.component.sass
@@ -6,14 +6,19 @@
     overflow: scroll
     width: 100%
 
-.arbeitspakete input
-    width: 45%
+.popupContent
+    margin-left: 40px
 
 .list input:nth-child(1)
     margin-right: 10px
+    width: 350px
+
+.list input:nth-child(2)
+    margin-right: 10px
+    width: 20px
 
 .btnMeilensteinHinzufuegen
-    width: 98%
+    width: 390px
 
 .btnMeilenstein
     height: 25px
